--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,11 @@
-version: "3"
-
-networks:
-  hyperkube: {}
+version: "2"
 
 services:
   etcd:
-    image: gcr.io/google_containers/etcd:2.3.7
-    networks:
-      - hyperkube
-    command: ['/usr/local/bin/etcd', '--addr=127.0.0.1:4001', '--bind-addr=0.0.0.0:4001', '--data-dir=/var/etcd/data']
+    image: "quay.io/coreos/etcd:v3.2"
+    command: "etcd --advertise-client-urls http://0.0.0.0:2379 --listen-client-urls http://0.0.0.0:2379"
+    ports:
+      - 2379:2379
 
   kubernetes:
     image: "gcr.io/google-containers/hyperkube-amd64:v1.8.5"
@@ -20,32 +17,27 @@ services:
 
   kubelet:
     image: gcr.io/google_containers/hyperkube-amd64:v1.8.5
-    networks:
-      - hyperkube
     ports:
       - 8080
-    command: "/hyperkube kubelet --hostname-override=127.0.0.1 --address=0.0.0.0 --api-servers=http://localhost:8080 --enable-server --config=/etc/kubernetes/manifests --containerized --v=2"
+    privileged: true
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:rw
+    command: "/hyperkube kubelet --hostname-override=127.0.0.1 --address=0.0.0.0 --enable-server --v=2"
 
   proxy:
     image: gcr.io/google_containers/hyperkube-amd64:v1.8.5
-    networks:
-      - hyperkube
     pid: host
-    command: "/hyperkube proxy --master=http://127.0.0.1:8080 --v=2"
+    command: "/hyperkube proxy --master=http://kubernetes:8080 --v=2"
 
   controller-manager:
     image: gcr.io/google_containers/hyperkube-amd64:v1.8.5
-    networks:
-      - hyperkube
     pid: host
-    command: "/hyperkube controller-manager --master=http://127.0.0.1:8080 --v=2"
+    command: "/hyperkube controller-manager --master=http://kubernetes:8080 --v=2"
 
   scheduler:
     image: gcr.io/google_containers/hyperkube-amd64:v1.8.5
-    networks:
-      - hyperkube
     pid: host
-    command: "/hyperkube scheduler --master=http://127.0.0.1:8080 --v=2"
+    command: "/hyperkube scheduler --master=http://kubernetes:8080 --v=2"
 
   registry:
     image: "registry:2"
